[workspace]
	exclude = ["advent-utils"]

	# All the crates
	members = ["day-01", "day-02", "day-03", "day-04", "day-05"]

	resolver = "2"

	[workspace.package]
		authors     = ["Ian Pratt <ianjdpratt@gmail.com>"]
		description = "My code for the advent of code - all written in Rust!"
		edition     = "2021"
		version     = "0.0.1"
