[workspace]
	exclude = ["advent-utils"]

	# All the crates
	members = [
		"day-01",
		"day-02",
		"day-03",
		"day-04",
		"day-05",
		"day-06",
		"day-07",
		"day-08",
		"day-09",
		"day-10",
		"day-11",
		"day-12",
		"day-13",
		"day-14",
		"day-15",
		"day-16",
		"day-17",
		"day-18",
		"day-19",
		"day-20",
		"day-21",
		"day-22",
		"day-23",
		"day-24",
		"day-25",
	]

	resolver = "2"

	[workspace.package]
		authors     = ["Ian Pratt <ianjdpratt@gmail.com>"]
		description = "My code for the advent of code - all written in Rust!"
		edition     = "2021"
		version     = "0.0.1"
