[package]
	authors.workspace     = true
	description.workspace = true
	edition               = "2021"
	name                  = "day-01"
	version.workspace     = true

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	advent-utils = { path = "../advent-utils" }
